--- a/app/docker-compose.yaml
+++ b/app/docker-compose.yaml
@@ -3,7 +3,7 @@ services:
     #image: public.ecr.aws/l0l7e4u1/3-tier-frontend:latest
     container_name: ng_frontend
     build:
-      context: ./frontend
+      context: ./app/frontend
       dockerfile: Dockerfile
     environment:
       - REACT_APP_BACKEND_URL=http://backend:8080
@@ -16,7 +16,7 @@ services:
     #image: public.ecr.aws/l0l7e4u1/3-tier-backend:latest
     container_name: ng_backend
     build:
-      context: ./backend
+      context: ./app/backend
       dockerfile: Dockerfile
     environment:
       - MONGO_CONN_STR=mongodb://mongodb-svc:27017/todo?directConnection=true
