--- a/app/docker-compose.yaml
+++ b/app/docker-compose.yaml
@@ -2,7 +2,9 @@ services:
   frontend:
     #image: public.ecr.aws/l0l7e4u1/3-tier-frontend:latest
     container_name: ng_frontend
-    build: ./frontend
+    build:
+      context: ./app/frontend
+      dockerfile: Dockerfile
     environment:
       - REACT_APP_BACKEND_URL=http://backend:8080
     ports:
@@ -13,7 +15,9 @@ services:
   backend:
     #image: public.ecr.aws/l0l7e4u1/3-tier-backend:latest
     container_name: ng_backend
-    build: ./backend
+    build:
+      context: ./app/backend
+      dockerfile: Dockerfile
     environment:
       - MONGO_CONN_STR=mongodb://mongodb-svc:27017/todo?directConnection=true
       - MONGO_USERNAME=${MONGO_USERNAME}
