--- a/k8s_manifests/backend-deployment.yaml
+++ b/k8s_manifests/backend-deployment.yaml
@@ -23,7 +23,7 @@ spec:
     spec:
       containers:
       - name: backend
-        image: public.ecr.aws/l0l7e4u1/3-tier-backend:latest
+        image: 091008253157.dkr.ecr.us-east-1.amazonaws.com/3-tier-backend
         imagePullPolicy: Always
         env:
           - name: MONGO_CONN_STR
