--- a/k8s_manifests/frontend-deployment.yaml
+++ b/k8s_manifests/frontend-deployment.yaml
@@ -23,7 +23,7 @@ spec:
     spec:
       containers:
       - name: frontend
-        image: public.ecr.aws/l0l7e4u1/3-tier-frontend:latest
+        image: 091008253157.dkr.ecr.us-east-1.amazonaws.com/3-tier-frontend
         imagePullPolicy: Always
         env:
           - name: REACT_APP_BACKEND_URL
