--- a/app/docker-compose.yaml
+++ b/app/docker-compose.yaml
@@ -45,8 +45,8 @@ services:
       - "--bind_ip"
       - "0.0.0.0"
     environment:
-      - MONGO_INITDB_ROOT_USERNAME=${MONGO_USERNAME}
-      - MONGO_INITDB_ROOT_PASSWORD=${MONGO_PASSWORD}
+      - MONGO_INITDB_ROOT_USERNAME=mongo-sec
+      - MONGO_INITDB_ROOT_PASSWORD=mongo-sec
     ports:
       - "27017:27017"
     volumes:
