--- a/app/docker-compose.yaml
+++ b/app/docker-compose.yaml
@@ -20,8 +20,8 @@ services:
       dockerfile: Dockerfile
     environment:
       - MONGO_CONN_STR=mongodb://mongodb-svc:27017/todo?directConnection=true
-      - MONGO_USERNAME=mongo-sec  #MONGO_USERNAME=${MONGO_USERNAME}
-      - MONGO_PASSWORD=mongo-sec  #MONGO_PASSWORD=${MONGO_PASSWORD}
+      - MONGO_USERNAME=admin  #MONGO_USERNAME=${MONGO_USERNAME}
+      - MONGO_PASSWORD=password123  #MONGO_PASSWORD=${MONGO_PASSWORD}
     ports:
       - "8081:8080"
     depends_on:
@@ -45,8 +45,8 @@ services:
       - "--bind_ip"
       - "0.0.0.0"
     environment:
-      - MONGO_INITDB_ROOT_USERNAME=mongo-sec
-      - MONGO_INITDB_ROOT_PASSWORD=mongo-sec
+      - MONGO_INITDB_ROOT_USERNAME=admin
+      - MONGO_INITDB_ROOT_PASSWORD=password123
     ports:
       - "27017:27017"
     volumes:
